# ChemMonitor

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.md  requirements.txt  run.py
attached_assets/: Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-plotly-chart-elements-with-the-same-1753503910948_1753503910949.txt
data/: alert_config.json  alert_history.json  process_data.json
exports/: process_data_20250809_015044.json  process_data_20250809_015059.json  process_data_20250809_030654.json  process_data_20250809_030713.json  process_data_20250809_031305.csv  process_data_20250809_031307.xlsx  relatorio_alertas_20250809_031152.json  relatorio_estatisticas_20250809_031147.json  relatorio_operacional_20250809_031141.json
pages/: 1_Data_Input.py  2_Historical_Analysis.py  3_Alerts_Config.py  4_Data_Export.py  alerts.py  dashboard.py  data_input.py  export.py  historical.py
utils/: alert_system.py  data_manager.py  statistics.py  theme_manager.py  visualization.py
